@@ -1,0 +1,3 @@
+$NetBSD: DESCR,v 1.1 2013/01/19 10:24:41 manu Exp $
+
+This Nagios plugin monitors backup status from /etc/dumpdates
